data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2076.wast
;; 7. **Test Description:**    A block enclosing a loop with intermediate `end` instructions misinterpreted, causing a loop with no proper exit condition.      **Constraint Checked:** Well-nested blocks and correct matching of `end` instructions.      **Relation to Infinite Loops:** Ensures correct nesting and termination of blocks to prevent infinite loops due to nesting errors.

(assert_invalid
  (module (func $block-loop-end-misinterpret
    (block 
      (loop
        (br_if 0 (i32.const 1))
      ) 
      (end) 
      (i32.const 0)
    )
  ))
  "unexpected end of section or function"
)